[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://particles/BloodParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entity.gd" type="Script" id=3]
[ext_resource path="res://enemies/EnemyStateMachine.gd" type="Script" id=4]
[ext_resource path="res://enemies/WanderState.gd" type="Script" id=5]
[ext_resource path="res://enemies/AttackState.gd" type="Script" id=6]
[ext_resource path="res://enemies/ChaseState.gd" type="Script" id=7]
[ext_resource path="res://enemies/StunnedState.gd" type="Script" id=8]
[ext_resource path="res://sprites/icon.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 11.1288

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 12.8924

[node name="Enemy" type="RigidBody2D" groups=[
"enemies",
]]
mode = 2
gravity_scale = 0.0
script = ExtResource( 1 )
blood_particles = ExtResource( 2 )

[node name="Entity" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
START_STATE = NodePath("Wander")

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Stunned" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="StateLabel" type="Label" parent="."]
margin_left = -14.2698
margin_top = -20.9002
margin_right = 42.7302
margin_bottom = -6.90022
rect_scale = Vector2( 0.5, 0.5 )
text = "DEFAULT"
align = 1
valign = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.909804, 0.0470588, 0.0470588, 1 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[connection signal="killed" from="Entity" to="." method="_on_Entity_killed"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
